--- a/machine-learning-ex2/machine-learning-ex2/ex2/ex2.ipynb
+++ b/machine-learning-ex2/machine-learning-ex2/ex2/ex2.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
     "\n",
     "def gradient(theta, X, y):\n",
     "    m = y.size\n",
-    "    h = expit(X.dot(theta.reshape(-1,1)))\n",
+    "    h = expit(X.dot(theta))\n",
     "    grad =(1/m)*X.T.dot(h-y)\n",
     "    return grad\n",
     "## check that with theta as zeros, cost is about 0.693\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,9 @@
       "         Current function value: 0.203498\n",
       "         Iterations: 157\n",
       "         Function evaluations: 287\n",
-      "[-25.16130062   0.20623142   0.20147143]\n"
+      "[[-25.16130062]\n",
+      " [  0.20623142]\n",
+      " [  0.20147143]]\n"
      ]
     }
    ],
@@ -234,33 +236,82 @@
     "\n",
     "### get opimized theta\n",
     "optTheta,minCost = optimizeTheta(initTheta, X_new, y_new)\n",
+    "optTheta = np.matrix(optTheta).T\n",
     "print(optTheta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.2.4 Evaluating logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.77629159]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### predict\n",
+    "def predict(theta, X, threshold=0.5):\n",
+    "    p = expit(X.dot(theta)) >= threshold\n",
+    "    return (p.astype('int'))\n",
+    "        \n",
+    "# Student with Exam 1 score 45 and Exam 2 score 85\n",
+    "# Predict using the optimized Theta values from above \n",
+    "score = np.array([1, 45, 85])\n",
+    "p = expit(score.dot(optTheta))\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The train accuracy is 89.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = predict(optTheta, X_new)\n",
+    "acc = np.sum(pred.ravel() == y.ravel())/ pred.size\n",
+    "print(\"The train accuracy is {}%\".format(100*acc))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "def plotDecisionBoundary(theta, X, y):\n",
+    "    plt.figure(figsize=(10,8))\n",
+    "    plt.scatter(X_pos[:,0], X_pos[:,1], c='b', marker='+', label='Admitted', linewidths=2)\n",
+    "    plt.scatter(X_neg[:,0], X_neg[:,1], c='y', marker='o', label='Not Admitted', linewidths=2)\n",
+    "    plt.xlabel('Exam 1 score')\n",
+    "    plt.ylabel('Exam 2 score')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
